2000-11-22  Radek Doulik  <rodo@helixcode.com>

	* htmlimage.c (select_range): new method

	* htmltablecell.c (save): add \" around color
	(save): save width attribute

	* htmltable.c (save): save percent if percent > 0 instead of
	specified width

	* htmltablecell.c (save): fixed test

	* htmltable.c (save): added BACKGROUND, CELLSPACING, CELLPADDING,
	WIDTH and BORDER attributes

	* htmlimage.c (html_image_resolve_image_url): also strdup image
	url if not resolved
	(save): g_free url always

	* htmlimage.h (HTML_IMAGE_POINTER): define HTML_IMAGE_POINTER

	* htmltable.c (html_table_init): set bgPixmap to NULL

	* htmltable.h: added bgPixmap to HTMLTable

	* htmltablecell.c (save): make tags uppercase

	* htmltable.c (save): make tags uppercase

	* htmltext.c (get_tags): make tags uppercase

	* htmltablecell.c (save): save bgcolor attribute in TD tag

	* htmltable.c (save): save bgcolor attribute in TABLE tag

	* htmlengine.c (parse_table): set table->bgColor

	* htmltable.c (destroy): free bgColor
	(html_table_init): set bgColor to NULL

	* htmltable.h: added bgColor to HTMLTable structure

	* htmlengine-search.c (display_search_results): use new selection
	API

	* htmlcursor.c (forward): use html_object_next_leaf_not_type
	instead of html_object_next_leaf
	(backward): likewise

	* htmlobject.c (html_object_next_not_slave): don't require
	p->parent
	(html_object_prev_not_slave): likewise
	(html_object_next_leaf_not_type): fixed, use rv when going forward
	(html_object_prev_leaf_not_type): likewise

	* htmlundo.c (do_action): removed warning

	* htmlengine.c (html_engine_normalize_cursor): use
	html_engine_edit_selection_updater_update_now

	* htmlcursor.c (normalize): use html_object_get_length
	(normalize): use html_object_prev_not_slave

	* htmlinterval.c (html_interval_new_from_cursor): take care of
	cursors order

	* htmlengine-edit-selection-updater.c: removed old_point from
	HTMLEngineEditSelectionUpdater, it's not needed anymore