@@ -1,3 +1,11 @@
+2000-11-24  Radek Doulik  <rodo@helixcode.com>
+
+	* htmlclueflow.c (check_point): check for p coordinates instead of
+	self ones
+	(check_point): refactoring: remove tmp var obj1
+	(check_point): refactoring: remove tmp var x1, y1
+	(check_point): use html_object_next_not_slave
+
 2000-11-22  Radek Doulik  <rodo@helixcode.com>
 
 	* htmlimage.c (select_range): new method
